[build-system]  # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]  # https://python-poetry.org/docs/pyproject/
name = "mlops-demo"
version = "0.0.0"
description = "A Python package that ..."
authors = ["John Smith <john@example.com>"]
readme = "README.md"
repository = "https://github.com/user/my-package"

[tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
coloredlogs = "^15.0.1"
gunicorn = "^20.1.0"
poethepoet = "^0.16.0"
pydantic = "^1.9.1"
python = "^3.8"
uvicorn = { extras = ["standard"], version = "^0.18.2" }
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
mlflow = "^2.0.1"
bentoml = "^1.0.12"
seaborn = "^0.12.1"

[tool.poetry.group.test.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
absolufy-imports = "^0.3.1"
black = "^22.6.0"
coverage = { extras = ["toml"], version = "^6.4.1" }
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.6.22"
flake8-comprehensions = "^3.10.0"
flake8-mutable = "^1.2.0"
Flake8-pyproject = "^1.1.0"
flake8-pytest-style = "^1.6.0"
flake8-rst-docstrings = "^0.2.6"
flake8-tidy-imports = "^4.8.0"
isort = "^5.10.1"
mypy = "^0.961"
pep8-naming = "^0.13.0"
pre-commit = "^2.19.0"
pydocstyle = { extras = ["toml"], version = "^6.1.1" }
pytest = "^7.1.2"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.8.1"
pytest-xdist = "^2.5.0"
pyupgrade = "^2.34.0"
yesqa = "^1.4.0"

[tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
cruft = "^2.11.0"
pdoc = "^12.0.2"

[tool.black]  # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py38"]

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.flake8]  # https://flake8.pycqa.org/en/latest/user/options.html#options-and-their-descriptions
color = "always"
docstring_style = "numpy"
doctests = true
ignore = ["DAR103", "E203", "E501", "W503"]
max_line_length = 100
max_complexity = 10
strictness = "long"

[tool.isort]  # https://pycqa.github.io/isort/docs/configuration/options.html
color_output = true
line_length = 100
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
plugins = "pydantic.mypy"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "bentoml.*"
ignore_errors = true

[tool.pydocstyle]  # http://www.pydocstyle.org/en/latest/usage.html#configuration-files
convention = "numpy"

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml"
testpaths = ["src", "tests"]
xfail_strict = true

[tool.poe.tasks]  # https://github.com/nat-n/poethepoet

  [tool.poe.tasks.dev]
  help = "Serve a REST API in development"
  cmd = """
    uvicorn
      --host 0.0.0.0
      --port $port
      --reload
      mlops_demo.api:app
    """

    [[tool.poe.tasks.dev.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      mlops_demo
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "numpy"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"

  [tool.poe.tasks.lint]
  help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
      pre-commit run
        --all-files
        --color always
      """

  [tool.poe.tasks.serve]
  help = "Serve a REST API in production"
  cmd = """
    gunicorn
      --access-logfile -
      --bind 0.0.0.0:$port
      --graceful-timeout 10
      --keep-alive 10
      --log-file -
      --timeout 30
      --worker-class uvicorn.workers.UvicornWorker
      --worker-tmp-dir /dev/shm
      --workers 2
      mlops_demo.api:app
    """
  use_exec = true

    [[tool.poe.tasks.serve.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"

  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
    cmd = "coverage xml"
